<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.lawandy</groupId>
	<artifactId>hazeltree</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>Hazel Tree</name>
	<description>Nested Interval Tree Encoding by Dan Hazel</description>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<junit.version>5.6.2</junit.version>
		<maven.compiler.target>10</maven.compiler.target>
		<maven.compiler.source>10</maven.compiler.source>
	</properties>

	<dependencies>

		<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.ejml/ejml-simple -->
		<dependency>
			<groupId>org.ejml</groupId>
			<artifactId>ejml-simple</artifactId>
			<version>0.39</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-math3 -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-math3</artifactId>
			<version>3.6.1</version>
		</dependency>


    </dependencies>
</project>